test/files/neg/interop_typetags_arenot_manifests.scala
object Test extends App {
  def typeTagIsnotManifest[T: TypeTag] = {
    println(manifest[T])
  }

  typeTagIsnotManifest[Int]
  typeTagIsnotManifest[String]
  typeTagIsnotManifest[Array[Int]]
}